syntax = "proto3";

package proto;

import "google/api/annotations.proto";
//import "github.com/gogo/protobuf@v1.3.2/gogoproto/gogo.proto";

service Posts {
  rpc Save (SaveRequest) returns (SaveResponse) {
    option (google.api.http) = {
      post: "/blog/posts/save"
      body: "*"
    };
  }
}

message SaveRequest {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  int64 createTime = 5;
}

message SaveResponse {
  int64 postsId = 1;
}
